# docs/swagger.json
@@ -13,9 +13,9 @@
     "host": "localhost:3000",
     "basePath": "/",
     "paths": {
-        "/profile": {
-            "post": {
-                "description": "Get Profile by ID",
+        "/api/user/{id}": {
+            "get": {
+                "description": "Get User Profile by ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -23,38 +23,47 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Profile"
+                    "users"
                 ],
-                "summary": "Get a Profile",
-                "operationId": "get-profile-by-id",
+                "summary": "Get a User Profile",
                 "parameters": [
                     {
-                        "description": "ID",
-                        "name": "ID",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/routes.RequestID"
-                        }
+                        "type": "integer",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/models.ResponseModel"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/models.User"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
-                    "400": {
-                        "description": "Bad Request",
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/models.Response"
+                            "$ref": "#/definitions/models.ResponseModel"
                         }
                     },
-                    "500": {
-                        "description": "Internal Server Error",
+                    "503": {
+                        "description": "Service Unavailable",
                         "schema": {
-                            "$ref": "#/definitions/models.Response"
+                            "$ref": "#/definitions/models.ResponseModel"
                         }
                     }
                 }
@@ -62,14 +71,17 @@
         }
     },
     "definitions": {
-        "models.Response": {
+        "models.ResponseModel": {
             "type": "object",
             "properties": {
-                "code": {
-                    "type": "integer"
+                "data": {
+                    "type": "object"
                 },
                 "message": {
                     "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
                 }
             }
         },
@@ -81,6 +93,9 @@
                 },
                 "back_number": {
                     "type": "integer"
+                },
+                "created_at": {
+                    "type": "string"
                 },
                 "id": {
                     "type": "integer"
@@ -97,15 +112,10 @@
                 "preferred_position": {
                     "type": "string"
                 },
-                "user_id": {
+                "updated_at": {
                     "type": "string"
-                }
-            }
-        },
-        "routes.RequestID": {
-            "type": "object",
-            "properties": {
-                "ID": {
+                },
+                "user_id": {
                     "type": "string"
                 }
             }
