# models/response.go
@@ -2,13 +2,15 @@ package models
 
 // Response : type response struct
 type ResponseModel struct {
-	Code    int    `json:"code"`
-	Message string `json:"message"`
+	Success bool        `json:"success"`
+	Message string      `json:"message"`
+	Data    interface{} `json:"data"`
 }
 
-func Response(code int, message string) ResponseModel {
+func Response(Success bool, message string, data interface{}) ResponseModel {
 	return ResponseModel{
-		Code:    code,
+		Success: Success,
 		Message: message,
+		Data:    data,
 	}
 }
